Interested party updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -114,6 +114,10 @@
         Interested parties
       </h2>
 
+      <p class="govuk-body">
+        Interested parties can <a href="/interested/find-appeal/" class="govuk-link govuk-link--no-visited-state">find and comment on appeals</a>.
+      </p>
+
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
         Find an appeal
       </h3>
@@ -133,6 +137,10 @@
       </h3>
 
       <ul class="govuk-list govuk-list--bullet">
+
+        <li>
+          <a href="interested/find-appeal/v5/householder-appeal-first-notice-letter">Notice of an appeal from LPA</a>
+        </li>
         <li>
           <a href="interested/comment/v6/your-name">Comment on an appeal</a>
         </li>
