--- a/app/views/interested/comment/v6/your-email.html
+++ b/app/views/interested/comment/v6/your-email.html
@@ -25,10 +25,8 @@
     {{ title }}
   </h1>
 
-  <p>You need to provide an email address to appeal a planning decision using this service.</p>
-
   <p>
-    This is so we can save your progress and you can return to your appeal later. We&rsquo;ll also use this email address to contact you about your appeal.
+    We’ll contact you if we need to discuss your comments.
   </p>
 
   {{ govukInput({
