--- a/app/views/interested/find-appeal/v5/appeal-search-no-results.html
+++ b/app/views/interested/find-appeal/v5/appeal-search-no-results.html
@@ -1,7 +1,4 @@
-{% set pageref = "###" %}
-{% extends "layout.html" %}
-
-{% set serviceName = "Find out about planning appeals" %}
+{% extends '_layouts/layout-main.html' %}
 
 {% set title = "No matching appeals" %}
 
