--- a/app/views/interested/find-appeal/v5/appeal-search-postcode.html
+++ b/app/views/interested/find-appeal/v5/appeal-search-postcode.html
@@ -1,6 +1,5 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set serviceName = "Find and comment on planning appeals" %}
 {% set title = "Search for an appeal using a postcode" %}
 
 {% block pageTitle %}
@@ -61,7 +60,7 @@
       {% endif %}
 
       <p class="govuk-body">
-        <a href="appeal-search-reference?version=">
+        <a href="appeal-search-number?version=">
           Search for an appeal using the appeal reference
         </a>
       </p>
