--- a/app/views/interested/find-appeal/v5/guidance.html
+++ b/app/views/interested/find-appeal/v5/guidance.html
@@ -1,26 +1,32 @@
-{% extends '_layouts/layout-main.html' %}
-<!-- {% set prototypeLinks = [{href: 'errors/certain-types', text: 'Advertisement and DN not included yet'}] %} -->
+{% extends "layouts/main.html" %}
 
-{% set serviceName = "Find and comment on planning appeals" %}
-
-{% set title = "Guidance" %}
+{% set title = "Find and comment on planning appeals" %}
 
 {% block pageTitle %}
-  {{ title }} - {{serviceName}} - GOV.UK
+  {{ title }}
+{% endblock %}
+
+{% block header %}
+  <!-- Blank header with no service name for this page -->
+  {{ govukHeader() }}
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
-
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
-  }) }}
+  <div class="govuk-breadcrumbs">
+    <ol class="govuk-breadcrumbs__list">
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Home</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="#">Housing and local services</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">
+        <a class="govuk-breadcrumbs__link" href="https://www.gov.uk/browse/housing-local-services/planning-permission">
+          Planning permission and building regulations
+        </a>
+      </li>
+    </ol>
+  </div>
 {% endblock %}
 
 {% block content %}
@@ -28,11 +34,53 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
+      <h1 class="govuk-heading-xl">
         {{ title }}
       </h1>
 
-      <p class="govuk-body">
+      <aside class="app-mainstream-guide-contents-list" role="complementary">
+        <nav class="app-contents-list" aria-label="Pages in this guide" role="navigation">
+          <h2 class="app-contents-list__title">
+            Contents
+          </h2>
+          <ol class="app-contents-list__list">
+            <li aria-current="true" class="app-contents-list__list-item app-contents-list__list-item--dashed">
+              Overview
+            </li>
+
+            <li class="app-contents-list__list-item app-contents-list__list-item--dashed app-contents-list__list-item--active">
+              <a href="#">
+                When you can comment on an appeal
+              </a>
+            </li>
+
+            <li class="app-contents-list__list-item app-contents-list__list-item--dashed">
+              <a href="#">
+                Your comments
+              </a>
+            </li>
+
+            <li class="app-contents-list__list-item app-contents-list__list-item--dashed">
+              <a href="#">
+                Find an appeal
+              </a>
+            </li>
+          </ol>
+        </nav>
+      </aside>
+
+    </div>
+
+  </div>
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds app-mainstream-guide-body">
+
+      <h2 class="govuk-heading-m">
+        Overview
+      </h2>
+
+      <p>
         This is a service for searching, viewing and commenting on planning appeals.
       </p>
 
@@ -63,16 +111,16 @@
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          the 7-digit reference number that can be found on your letter from the local planning department. This can also be found on the local planning department's website
-        </li>
-
-        <li>
           an email address so we can contact you if we have any questions
         </li>
 
         <li>
-          your comments saved in a document
+          the 7-digit reference number that can be found on your letter from the local planning department. This can also be found on the local planning department's website
         </li>
+
+        <!-- <li>
+          your comments saved in a document
+        </li> -->
 
       </ul>
 
@@ -94,30 +142,91 @@
 
       {% include "_includes/sensitive-information-list.html" %}
 
+      <a href="/interested/find-appeal/v5/appeal-search-number" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+        Start now
+        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+        </svg>
+      </a>
 
-      <!-- <p class="govuk-body">
-        If you include any personal information that's not relevant, we'll ask you to resubmit. This could mean that you miss the deadline to submit comments.
+      <nav class="app-pagination" role="navigation" aria-label="Pagination">
+        <ul class="app-pagination__list">
+          <!-- <li class="app-pagination__item app-pagination__item--previous">
+            <a href="#" class="govuk-link app-pagination__link" rel="prev">
+              <span class="app-pagination__link-title">
+                <svg class="app-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+                  <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
+                </svg>
+                <span class="app-pagination__link-text">
+                  Previous
+                </span>
+              </span>
+              <span class="app-pagination__link-divider visually-hidden">:</span>
+              <span class="app-pagination__link-label">
+                Page 1 title
+              </span>
+            </a>
+          </li> -->
+          <li class="app-pagination__item app-pagination__item--next">
+            <a href="#" class="govuk-link app-pagination__link" rel="next">
+              <span class="app-pagination__link-title">
+                <svg class="app-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+                  <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
+                </svg>
+                <span class="app-pagination__link-text">
+                  Next
+                </span>
+              </span>
+              <span class="app-pagination__link-divider visually-hidden">:</span>
+              <span class="app-pagination__link-label">
+                When you can comment on an appeal
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <p>
+        <a href="#">
+          View a printable version of the whole guide
+        </a>
       </p>
 
-      <p class="govuk-body">
-        Your comments must not include inflammatory or abusive language.
-      </p> -->
+    </div>
 
-      {{ govukButton({
-        href: "find-appeal",
-        text: "Continue"
-      }) }}
+    <div class="govuk-grid-column-one-third">
+
+      <aside class="app-related-items" role="complementary">
+        <h2 class="govuk-heading-m" id="subsection-title">
+          Related
+        </h2>
+        <nav role="navigation" aria-labelledby="subsection-title">
+          <ul class="govuk-list govuk-!-font-size-16">
+            <li>
+              <a href="#">
+                Local councils and services
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Planning permission and building regulations
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Planning permission and appeals
+              </a>
+            </li>
+            <li>
+              <a href="#" class="govuk-!-font-weight-bold">
+                More <span class="govuk-visually-hidden">in Subsection</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
 
     </div>
   </div>
 
-{% endblock %}
-
-{% block pageScripts %}
-  <script type="text/javascript" src="/public/javascripts/autocomplete/accessible-autocomplete.min.js"></script>
-  <script>
-    accessibleAutocomplete.enhanceSelectElement({
-      selectElement: document.querySelector('#appealsub-{{version}}-beforeyoustart-planningdepartment')
-    })
-  </script>
 {% endblock %}
