Tiny fix for appeal ref

--- a/app/views/interested/find-appeal/v5/appeal-details.html
+++ b/app/views/interested/find-appeal/v5/appeal-details.html
@@ -100,7 +100,7 @@
             Appeal reference
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['appealCode'] }}
+            {{ data['appealCode'] or '0166327' }}
           </dd>
         </div>
 
