Interested parties can comment updates, grid search, tab view

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -3,6 +3,7 @@
 @import "components/footer";
 @import "components/upload";
 
+@import "pins/pins_tables";
 
 // Top border for headers to draw attention to areas
 .app-border-top-big {
