--- a/app/views/index.html
+++ b/app/views/index.html
@@ -40,7 +40,7 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          HAS
+          <a href="/appeal/has/">Householder</a>
         </li>
         <li>
           Full planning
