Updated index miro copy

--- a/app/views/appeal/has/index.html
+++ b/app/views/appeal/has/index.html
@@ -33,7 +33,7 @@
     <p>Improvements to the process that was developed and released. Brings householder in line with design changes made in the time since release.</p>
 
     {{ govukInsetText({
-      html: '<p><a href="https://miro.com/app/board/uXjVPAIID7s=/?share_link_id=748467977892">Design Miro board</a> with notes from review of live and suggestions to changes.</p>'
+      html: '<p><a href="https://miro.com/app/board/uXjVPAIID7s=/?share_link_id=748467977892">Design Miro board</a> with notes from review of live and changes.</p>'
     }) }}
 
     {# <p class="govuk-!-margin-bottom-2">List of proposed changes:</p>
